--- a/src/main/resources/me/kenzierocks/mcpide/Main.fxml
+++ b/src/main/resources/me/kenzierocks/mcpide/Main.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.kenzierocks.mcpide.controller.MainController">
+<VBox styleClass="root" stylesheets="@darktheme.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.kenzierocks.mcpide.controller.MainController">
    <children>
       <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
         <menus>
@@ -43,7 +43,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <SplitPane dividerPositions="0.05" stylesheets="@Main.css" VBox.vgrow="ALWAYS">
+      <SplitPane dividerPositions="0.05" stylesheets="@Main.css,@highlighting.css" VBox.vgrow="ALWAYS">
          <items>
             <TreeView fx:id="fileTree" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
             <TabPane fx:id="textView" tabClosingPolicy="ALL_TABS" tabMaxHeight="20.0">
