--- a/src/main/resources/me/kenzierocks/mcpide/darktheme.css
+++ b/src/main/resources/me/kenzierocks/mcpide/darktheme.css
@@ -11,6 +11,10 @@
     -fx-background-color: -dark-bg-color;
 }
 
+#status-label {
+    -fx-text-fill: -dark-text-color;
+}
+
 .cell > .tree-disclosure-node > .arrow {
     -fx-background-color: -dark-text-color;
 }
