Add colors to srg-backed text

--- a/src/main/resources/me/kenzierocks/mcpide/darktheme.css
+++ b/src/main/resources/me/kenzierocks/mcpide/darktheme.css
@@ -2,6 +2,7 @@
     -dark-text-color: #BABABA;
     -dark-selected-text-color: #BABABA;
     -dark-bg-color: #3C3F41;
+    -darker-bg-color: #2E3133;
     -dark-bg-color-alt: #888e91;
     -dark-selected-bg-color: #334DB3;
 }
